Fix TOC overlapping top navigation on medium-sized screens

--- a/css/docs-blue-theme-4.5.1.css
+++ b/css/docs-blue-theme-4.5.1.css
@@ -290,7 +290,6 @@ div.screenshot {
 /* TOC */
 #content #toc {
     border: 0 none;
-    z-index: 1;
 }
 
 #toc ul {
