--- a/css/docs-blue-theme.css
+++ b/css/docs-blue-theme.css
@@ -276,7 +276,6 @@ div.screenshot {
 /* TOC */
 #content #toc {
     border: 0 none;
-    z-index: 1;
 }
 
 #toc ul {
